RESOLVED FIXED209568
[macOS] Fix sandbox violations related to media playback
https://bugs.webkit.org/show_bug.cgi?id=209568
Summary [macOS] Fix sandbox violations related to media playback
Per Arne Vollan
Reported 2020-03-25 15:55:26 PDT
Fix observed sandbox violations during media playback.
Attachments
Patch (1.50 KB, patch)
2020-03-25 15:57 PDT, Per Arne Vollan
no flags
Per Arne Vollan
Comment 1 2020-03-25 15:55:57 PDT
Per Arne Vollan
Comment 2 2020-03-25 15:57:46 PDT
Brent Fulgham
Comment 3 2020-03-25 16:02:28 PDT
Comment on attachment 394557 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=394557&action=review r=me > Source/WebKit/UIProcess/Cocoa/WebProcessPoolCocoa.mm:256 > +#if PLATFORM(MAC) || PLATFORM(MACCATALYST) This is my fault! Thank you for fixing this.
Per Arne Vollan
Comment 4 2020-03-25 16:20:19 PDT
(In reply to Brent Fulgham from comment #3) > Comment on attachment 394557 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=394557&action=review > > r=me > > > Source/WebKit/UIProcess/Cocoa/WebProcessPoolCocoa.mm:256 > > +#if PLATFORM(MAC) || PLATFORM(MACCATALYST) > > This is my fault! Thank you for fixing this. Thanks for reviewing!
EWS
Comment 5 2020-03-25 16:52:31 PDT
Committed r259023: <https://trac.webkit.org/changeset/259023> All reviewed patches have been landed. Closing bug and clearing flags on attachment 394557 [details].
Note You need to log in before you can comment on or make changes to this bug.