[macOS] Fix sandbox violations related to media playback https://bugs.webkit.org/show_bug.cgi?id=209568 <rdar://problem/60262125>

Reviewed by Brent Fulgham.

Fix observed sandbox violations during media playback.

* UIProcess/Cocoa/WebProcessPoolCocoa.mm:
(WebKit::mediaRelatedMachServices):


Canonical link: https://commits.webkit.org/222501@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@259023 268f45cc-cd09-0410-ab3c-d52691b4dbfc